Prevent image from squashing
Added flex-wrap to conatiner .welcome and min-width 300px to .awesome-img. When shrinking page the image stays in proportion and wraps, perhaps a little too early? Something to possibly return to.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 .header {
@@ -26,4 +27,37 @@ ul {
     font-size: 18px;
     color: #E5E7EB;
     gap: 30px;
+}
+
+.welcome {
+    display: flex;
+    background-color: #1F2937;
+    padding: 50px 150px;
+    justify-content: space-between;
+    gap: 100px;
+    flex-wrap: wrap;
+}
+
+
+h2 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+    margin: 0;
+    max-width: 300px;
+}
+
+.awesome-text {
+    font-size: 18px;
+    color: #E5E7EB;
+    padding: 20px 0;
+    max-width: 500px;
+}
+
+.button-one {
+
+}
+
+.awesome-img {
+    min-width: 300px
 }
